@@ -1,3 +1,11 @@
+2003-04-11  Jacob Smullyan  <smulloni@smullyan.org>
+
+	* pylibs/formlib/__init__.py: conditional import of aecomp
+	submodule (will still work if AE isn't installed).
+
+	* pylibs/formlib/aecomp.py: viewable fields/form that delegate
+	to AE components for presentation.
+
 2003-04-07  Jacob Smullyan  <smulloni@smullyan.org>
 
 	* docs/stmlrefer/stmlrefer.tex (section{\texttt{<:for:>}}): Added
